# paraview-visualizer

./: .codespellrc  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  captain-definition  pv_run.py  setup.cfg
.deploy-release/: Dockerfile  README.md
.deploy-release/setup/: apps.yml  requirements.txt
.github/workflows/: test_and_release.yml
docker/: Dockerfile  README.md
docker/scripts/: build_image.sh  build_server.sh  run_image.sh  run_server.sh
docker/setup/: apps.yml  initialize.sh  requirements.txt  trame.py
documentation/jupyter/: README-osx.md
documentation/jupyter/example/: test.ipynb
pv_visualizer/: __init__.py
pv_visualizer/app/: cli.py  controller.py  jupyter.py  main.py
pv_visualizer/app/assets/: __init__.py
pv_visualizer/app/engine/: __init__.py  decorators.py  definitions.py  domains.py  proxymanager.py  pv_helper.py  pv_proxy.py
pv_visualizer/app/ui/: __init__.py  algorithms.py  files.py  main.py  pipeline.py  settings.py  state_change.py  view_toolbox.py
pv_visualizer/html/: __init__.py  data_information.py  file_browser.py  filters.py  pipeline.py  proxy_editor.py
pv_visualizer/html/assets/: __init__.py
pv_visualizer/html/module/: .gitignore  __init__.py
pv_visualizer/tests/: test_import.py
tests/: test_import.py
vue-components/: README.md  package-lock.json  package.json  vue.config.js
vue-components/src/: use.js  utils.js
vue-components/src/components/: SwLifeCycle.vue  index.js  types.js
vue-components/src/icons/: index.js  pqEditColor.vue  pqEditScalarBar.vue  (+6 more)
(+36 files in other folders)
