[metadata]
name = pv-visualizer
version = 0.1.3
description = Web frontend to ParaView
long_description = file: README.rst
author = Kitware Inc.
license = BSD License
classifiers =
    Development Status :: 1 - Planning
    Environment :: Web Environment
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: JavaScript
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    Python
    Interactive
    Web
    Application
    Framework

[options]
packages = find:
include_package_data = True
install_requires =
    trame
    trame-simput

[options.entry_points]
console_scripts =
    pv-visualizer = pv_visualizer:main

[semantic_release]
version_pattern = setup.cfg:version = (\d+\.\d+\.\d+)